子路由 確認看看有沒有更好寫法

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -18,6 +18,9 @@
 
 .site-layout .site-layout-background {
   background: #ffffff;
+  margin: 24px 16px;
+  padding: 24px;
+  min-height: 280px,
 }
 
 .Dashboard-layout {
